Fix dark mode hover color, fix Grommet icon stroke application

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -3,21 +3,19 @@
 @tailwind utilities;
 
 :root {
-    --accent: 124, 58, 237;
-    --accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
+  --accent: 124, 58, 237;
+  --accent-gradient: linear-gradient(45deg, rgb(var(--accent)), #da62c4 30%, white 60%);
 }
 
 html {
-    font-family: system-ui, sans-serif;
+  font-family: system-ui, sans-serif;
 }
 
 code {
-    font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
-    Bitstream Vera Sans Mono, Courier New, monospace;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+  Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
-.forceStroke {
-    > path, g {
-        stroke: currentColor;
-    }
+.forceStroke > path, g {
+  stroke: currentColor;
 }
